[package]
name = "game-2048"
version = "0.1.0"
authors = ["Dimitri Belopopsky <dimitri@belopopsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.0"
features = ["ttf"]

[dependencies]
rand = "0.5.0"